# MeowFRP_Client

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
app/assets/: app_assets.qrc
app/src/: app_controller.cpp  app_controller.h  control_api_client.cpp  control_api_client.h  main.cpp  main_window.cpp  main_window.h  models.h  profile_service.cpp  profile_service.h  tunnel_runtime_service.cpp  tunnel_runtime_service.h
docs/: architecture.md
packaging/: launcher.cpp  qt.conf
qml/: Main.qml
tools/: generate_app_icon.py
